--- a/Template.tex
+++ b/Template.tex
@@ -13,6 +13,7 @@
 % Title.
 % ------
 \title{AUTHOR GUIDELINES FOR ICASSP 2014 PROCEEDINGS MANUSCRIPTS}
+
 %
 % Single address.
 % ---------------
@@ -44,13 +45,16 @@
 \maketitle
 %
 \begin{abstract}
-The abstract should appear at the top of the left-hand column of text, about
-0.5 inch (12 mm) below the title area and no more than 3.125 inches (80 mm) in
-length.  Leave a 0.5 inch (12 mm) space between the end of the abstract and the
-beginning of the main text.  The abstract should contain about 100 to 150
-words, and should be identical to the abstract text submitted electronically
-along with the paper cover sheet.  All manuscripts must be in English, printed
-in black ink.
+Transitions between stable states are the dominant mechanism for biological function
+at the molecular level.  A full molecular understanding of how these transitions are
+driven remains a challenging problem due to the high dimensionality of the protein
+space and the poor sampling that is achieved with modern molecular dynamics simulations.
+We argue in this paper that a streaming database with machine learning algorithms
+to enable feature engineering, dimensionality reduction, and state identification can
+be used to define the most important degrees of freedom that drive conformational
+change. Our algorithm is tested on BPTI using the data generated from the DE Shaw
+research group as an initial entry point for classification of states and an initial
+description of the events leading to transitions between states.
 \end{abstract}
 %
 \begin{keywords}
@@ -60,66 +64,49 @@ One, two, three, four, five
 \section{Introduction}
 \label{sec:intro}
 
-These guidelines include complete descriptions of the fonts, spacing, and
-related information for producing your proceedings manuscripts. Please follow
-them and if you have any questions, direct them to Conference Management
-Services, Inc.: Phone +1-979-846-6800 or email
-to \\\texttt{papers@icassp2013.org}.
+Many years of research has shown that proteins live in a multi-time scale universe
+with long dwell times in stable states separated by rapid transitions between states.
+Structural work has confirmed that many proteins have a stable state that can be
+solved by x-ray or nmr methods.  Further experimental work on several canonical
+systems has been able to prove the existence of alternative stable structures.  A
+full, experimental, characterization of the transitions between folded states is,
+in general, an intractable problem that has resisted a general solution.
+
+Molecular dynamics can be a tremendous aid for such settings, by providing
+a detailed molecular view of the stable states and their nearby stable conformational
+wells.  Despite the promise of molecular dynamics as a general solution for understanding
+the functional significance of conformational change, the computational limits of
+sampling have prevented, even in the best of cases, a fully detailed description of
+all states and samples on the transitions between states have been even more
+difficult to obtain in a converged manner.  
+
+This paper is an attempt to understand more about state to state conformational
+change by first using machine learning methods to better understand the features
+that describe the states and then to couple that knowledge to enable an iterative
+sampling approach to be defined that enables a more rapid and more confident
+convergence on the transitions between states.
+
+
 
 \section{Formatting your paper}
 \label{sec:format}
 
-All printed material, including text, illustrations, and charts, must be kept
-within a print area of 7 inches (178 mm) wide by 9 inches (229 mm) high. Do
-not write or print anything outside the print area. The top margin must be 1
-inch (25 mm), except for the title page, and the left margin must be 0.75 inch
-(19 mm).  All {\it text} must be in a two-column format. Columns are to be 3.39
-inches (86 mm) wide, with a 0.24 inch (6 mm) space between them. Text must be
-fully justified.
 
 \section{PAGE TITLE SECTION}
 \label{sec:pagestyle}
 
-The paper title (on the first page) should begin 1.38 inches (35 mm) from the
-top edge of the page, centered, completely capitalized, and in Times 14-point,
-boldface type.  The authors' name(s) and affiliation(s) appear below the title
-in capital and lower case letters.  Papers with multiple authors and
-affiliations may require two or more lines for this information. Please note
-that papers should not be submitted blind; include the authors' names on the
-PDF.
 
 \section{TYPE-STYLE AND FONTS}
 \label{sec:typestyle}
 
-To achieve the best rendering both in printed proceedings and electronic proceedings, we
-strongly encourage you to use Times-Roman font.  In addition, this will give
-the proceedings a more uniform look.  Use a font that is no smaller than nine
-point type throughout the paper, including figure captions.
-
-In nine point type font, capital letters are 2 mm high.  {\bf If you use the
-smallest point size, there should be no more than 3.2 lines/cm (8 lines/inch)
-vertically.}  This is a minimum spacing; 2.75 lines/cm (7 lines/inch) will make
-the paper much more readable.  Larger type sizes require correspondingly larger
-vertical spacing.  Please do not double-space your paper.  TrueType or
-Postscript Type 1 fonts are preferred.
-
-The first paragraph in each section should not be indented, but all the
-following paragraphs within the section should be indented as these paragraphs
-demonstrate.
 
 \section{MAJOR HEADINGS}
 \label{sec:majhead}
 
-Major headings, for example, "1. Introduction", should appear in all capital
-letters, bold face if possible, centered in the column, with one blank line
-before, and one blank line after. Use a period (".") after the heading number,
-not a colon.
 
 \subsection{Subheadings}
 \label{ssec:subhead}
 
-Subheadings should appear in lower case (initial word capitalized) in
-boldface.  They should start at the left margin on a separate line.
 
 \subsubsection{Sub-subheadings}
 \label{sssec:subsubhead}
